[tool.poetry]
name = "se-leaverequestsystem"
version = "0.1.0"
description = ""
authors = ["louisbank <156777035+louisbank-edu-thailand@users.noreply.github.com>"]
#readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.1"
flask-sqlalchemy = "^3.1.1"
flask-testing = "^0.8.1"

[tool.poetry.dev-dependencies]
flask-testing = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
